Fix grid gaps added

--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -17,8 +17,8 @@
   margin-bottom: 0;
   padding: 0;
   list-style: none;
-  //grid-row-gap: 83px;
   grid-row-gap: 16px;
+  margin-top: 0;
 
   @media (min-width: 550px) {
     display: grid;
@@ -30,10 +30,13 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, max-content);
     grid-row-gap: 43px;
+    padding-right: 35px;
+    grid-column-gap: 35px;
   }
 
   @media (min-width: $desktop-width) {
-    grid-template-columns: 2fr 3fr;
+    padding-right: 215px;
+    grid-column-gap: 40px;
   }
 }
 
@@ -68,11 +71,6 @@
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 22px;
-    margin-right: 30px;
-
-    &:nth-child(odd) {
-      margin-right: 50px;
-    }
   }
 
   &::before {
